Crash instead of error message on Linux for unsupported OpenGL #58250

Closed
opened 2018-11-30 01:26:33 +01:00 by Tomasz · 19 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: Mesa DRI Mobile Intel® GM45 Express Chipset

Blender Version
Broken: blender-2.80-63c06531707
Worked: blender-2.79b

Short description of error
Segfault at startup.
blender.crash.txt
crash.txt
system-info.txt

**System Information** Operating system: Ubuntu 18.04 Graphics card: Mesa DRI Mobile Intel® GM45 Express Chipset **Blender Version** Broken: blender-2.80-63c06531707 Worked: blender-2.79b **Short description of error** Segfault at startup. [blender.crash.txt](https://archive.blender.org/developer/F5761404/blender.crash.txt) [crash.txt](https://archive.blender.org/developer/F5761406/crash.txt) [system-info.txt](https://archive.blender.org/developer/F5761431/system-info.txt)
Author

Added subscriber: @shadow0133

Added subscriber: @shadow0133

#58095 was marked as duplicate of this issue

#58095 was marked as duplicate of this issue

#59888 was marked as duplicate of this issue

#59888 was marked as duplicate of this issue

#59762 was marked as duplicate of this issue

#59762 was marked as duplicate of this issue

#59653 was marked as duplicate of this issue

#59653 was marked as duplicate of this issue

#58602 was marked as duplicate of this issue

#58602 was marked as duplicate of this issue

Added subscriber: @candreacchio

Added subscriber: @candreacchio

The GPU requirements for blender 2.8 have been increased and needs to be compatible with OpenGL 3.3 (which came out in 2010)

Your GPU is only OpenGL 2.0 Compatible -- https://www.intel.com/content/www/us/en/support/articles/000005524/graphics-drivers.html

The GPU requirements for blender 2.8 have been increased and needs to be compatible with OpenGL 3.3 (which came out in 2010) Your GPU is only OpenGL 2.0 Compatible -- https://www.intel.com/content/www/us/en/support/articles/000005524/graphics-drivers.html

Added subscriber: @brecht

Added subscriber: @brecht

Blender will indeed not work on this graphics card. You should be able to use the software OpenGL script bundled with Blender though.

We should not crash in this case but print an informative message, that part I consider a bug.

Blender will indeed not work on this graphics card. You should be able to use the software OpenGL script bundled with Blender though. We should not crash in this case but print an informative message, that part I consider a bug.
Brecht Van Lommel changed title from SegFault at startup to Crash instead of error message on Linux for unsupported OpenGL 2018-11-30 10:52:43 +01:00
Author

Running blender-softwaregl also segfaults.
crash_softwaregl.txt
blender.crash.txt

Running blender-softwaregl also segfaults. [crash_softwaregl.txt](https://archive.blender.org/developer/F5767899/crash_softwaregl.txt) [blender.crash.txt](https://archive.blender.org/developer/F5767901/blender.crash.txt)

Added subscribers: @JamesCrowther, @ZedDB

Added subscribers: @JamesCrowther, @ZedDB

Added subscriber: @caseyennis

Added subscriber: @caseyennis

Added subscriber: @KammutierSpule

Added subscriber: @KammutierSpule

Added subscriber: @pixelfairy

Added subscriber: @pixelfairy

Added subscribers: @Karthik-1, @joekoop, @StephenSwaney

Added subscribers: @Karthik-1, @joekoop, @StephenSwaney

This issue was referenced by 3c411f5ba1

This issue was referenced by 3c411f5ba1d46b34a7812d9d6101481338a19aec

For updating software OpenGL to support Blender 2.8, there is #56315 (Blender 2.8 with software GL does not start).

For updating software OpenGL to support Blender 2.8, there is #56315 (Blender 2.8 with software GL does not start).

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58250
No description provided.