Fix T58250: crash starting Blender on X11 without OpenGL 3.3.

Instead display an error message and exit.